<resources>
    <string name="app_name">Black Jack</string>
    <string name="title_activity_main">Black Jack</string>

    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_play">Play</string>

    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="split">Split</string>
    <string name="double_down">Double Down</string>
    <string name="surrender">Surrender</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="hello_world">hello</string>
    <string name="logo_content_description">Black Jack</string>
    <string name="place_bet">Place Bet</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
